@@ -21,6 +21,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix flushCall for backward compatibility (#2580). [chenguokai]
 
+****  Fix preprocessor stringify of undefined macro. [Martin Whitaker]
+
 
 * Verilator 4.100 2020-09-07
 
